--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "3.6.0",
     "webpack-dev-server": "^3.8.1"
   }
