--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,16 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "browsers": [
-          "> 1%",
-          "last 2 versions"
-        ]
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": ["> 1%", "last 2 versions"]
+        },
+        "useBuiltIns": "entry"
       }
-    }],
+    ],
     "stage-2",
     "react"
   ],
-  "plugins": [
-    "syntax-dynamic-import"
-  ]
+  "plugins": ["syntax-dynamic-import"]
 }
