--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^2.1.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "polyfill": "^0.1.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
